# each

./: Cargo.toml  LICENSE.md  Makefile  README.md  azure-pipelines.yml
.github/workflows/: release.yml
src/: action.rs  errors.rs  main.rs  readers.rs  tests.rs
src/formats/: csv.rs  json.rs  mod.rs
src/parsers/: csv.rs  json.rs
test-resources/: people.csv  people.json  people.tsv
