[package]
name = "each"
description = "A better way of working with structured data on the command line"
homepage = "https://github.com/arraypad/each"
repository = "https://github.com/arraypad/each"
readme = "README.md"
license = "MIT"
keywords = ["data", "command", "shell", "xargs"]
categories = ["command-line-utilities"]
version = "0.1.0"
authors = ["Arpad Ray <arraypad@gmail.com>"]
edition = "2018"

[dependencies]
atty = "0.2.13"
csv = "1.1.1"
clap = "2.33.0"
dialoguer = "0.5.0"
env_logger = "0.7.1"
exitcode = "1.1.2"
failure = "0.1.6"
handlebars = "2.0.2"
indexmap = "1.3.0"
log = "0.4.0"
rayon = "1.2.0"
serde = "1.0.102"
subprocess = "0.1.18"

[dependencies.serde_json]
version = "1.0.41"
features = ["preserve_order"]

[dev-dependencies]
assert_cli = "0.6.3"
lazy_static = "1.4.0"
