[package]
name = "each"
description = "A better way of working with structured data on the command line"
homepage = "https://github.com/arraypad/each"
repository = "https://github.com/arraypad/each"
readme = "README.md"
license = "MIT"
keywords = ["data", "command", "shell", "xargs"]
categories = ["command-line-utilities"]
version = "0.1.3"
authors = ["Arpad Ray <arraypad@gmail.com>"]
edition = "2021"

[dependencies]
atty = "0.2"
csv = "1.1"
clap = "3.1"
dialoguer = "0.10"
env_logger = "0.9"
exitcode = "1.1"
failure = "0.1"
handlebars = "4.2"
indexmap = "1.8"
jmespath = "0.3"
log = "0.4"
rayon = "1.5"
serde = "1.0"
subprocess = "0.2"

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dev-dependencies]
assert_cli = "0.6"
lazy_static = "1.4"
